TrackAdemy/TrackAdemy/Content/Site.css
/* ... */
/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}


/*sets border box sizing*/
* {
    box-sizing: border-box;
}

/*a simple means of setting auto margins for columns*/
.column {
    margin: auto;
}

    /*a simple way to set image sizing and location within columns*/
    .column img {
        height: auto;
        max-width: 100%;
    }
/* Create two equal columns that float next to each other */
.columnhalf {
    float: left;
    width: 50%;
    padding: 15px;
}

/* creat three equal columns that float next to each other*/
.columnthird {
    float: left;
    width: 33%;
    padding: 15px;
}


/*covers all input buttons*/
input[type=submit] {
    width: 100%;
    background-color: #4CAF50;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

    /*changes colors of input buttons*/
    input[type=submit]:hover {
        background-color: #45a049;
    }


/* Set width on the form input elements since they're 100% wide by default */
input, select, textarea {
    max-width: 280px;
}

    input[type=text], input[type=password] {
        max-width: 100vw;
        /*display: block;*/
    }

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

/*resizing to fit graphs vertically when device is smaller*/
@media screen and (max-width: 800px) {
    .column {
        width: 100%;
    }
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}
/*End GENERAL CLASSES*/

/*NAV*/
/*custom class a for setting navbar elems*/
a {
    color: white;
    float: right;
}

/*list for navbar elements*/
li a {
    display: inline;
    padding: 10px;
    text-align: center;
    margin-right: -10px;
}
/*adminNav bar gradient*/
#adminNav {
    background: linear-gradient(to right, #C22026,#F2696A);
}

/*studentNav bar gradient*/
#studentNav {
    background: linear-gradient(to right, #37499F,#3D92D0);
}

/*set navbar outline to transparent*/
.navbar {
    border-color: transparent;
}
/*End NAV*/

/*ADMIN MANAGE STUDENT*/

/*style for drop-down menu on Admin's MANAGE STUDENT page for student names*/
.containerManage {
    height: 100vh;
}

#rig {
    max-width: 150%;
    margin: 0 auto; /*center aligned*/
    padding: 0;
    font-size: 0; /* Remember to change it back to normal font size if have captions */
    list-style: none;
    background-color: transparent;
    width: 900px;
}

    #rig li {
        display: inline-block;
        *display: inline; /*for IE6 - IE7*/
        width: 25%;
        vertical-align: middle;
        box-sizing: border-box;
        margin: 0;
        padding: 0;
        ;
    }

/* The wrapper for each item */
.rig-cell {
    /*margin:12px;
    box-shadow:0 0 6px rgba(0,0,0,0.3);*/
    display: table-cell;
    position: relative;
    overflow: hidden;
    width: 150px;
    align-content: center;
}

/* If have the image layer */
.rig-img {
    display: block;
    width: 100%;
    height: auto;
    border: none;
    transform: scale(1);
    transition: all 1s;
}

#rig li:hover .rig-img {
    transform: scale(1.05);
}

/* If have the overlay layer */
.rig-overlay {
    position: absolute;
    display: block;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    background: #fe8484 url(img/link.png) no-repeat center 20%;
    background-size: 50px 50px;
    opacity: 0;
    filter: alpha(opacity=0); /*For IE6 - IE8*/
    transition: all 0.6s;
}

#rig li:hover .rig-overlay {
    opacity: 0.8;
}

/* If have captions */
.rig-text {
    display: block;
    padding: 0 10px;
    box-sizing: border-box;
    position: absolute;
    left: 0%;
    width: 100%;
    /*text-align: center;*/
    text-transform: capitalize;
    font-size: 12px;
    font-weight: bold;
    font-family: 'Oswald', sans-serif;
    font-weight: normal !important;
    top: 40%;
    color: #ffffff;
    opacity: 0;
    filter: alpha(opacity=0); /*For older IE*/
    transform: translateY(-20px);
    transition: all .3s;
}

#rig li:hover .rig-text {
    transform: translateY(0px);
    opacity: 1;
}

@media (max-width: 9000px) {
    #rig li {
        width: 50%;
    }
}

@media (max-width: 700px) {
    #rig li {
        width: 33.33%;
    }
}

@media (max-width: 550px) {
    #rig li {
        width: 50%;
    }
}
/*end ADMIN REPORT*/


/*STUDENT READ*/
#studentReadContainer {
    width: 100vw;
    height: auto;
    background-color: rosybrown;
    overflow: hidden;
}

#studentStats {
    width: 40%;
    position: relative;
    left: 15%;
    float:left;
}

#graphs {
    width: 600px;
    float: right;
    position: relative;
    overflow: hidden;
}

#currentMonth {
    width: 300px;
    height: auto;
    float: left;
}

#threeMonths {
    width: 300px;
    height: auto;
    float: left;
}

#yearToDate {
    width: 300px;
    height: auto;
    float: left;
}

#totalHours {
    width: 300px;
    height: auto;
    float: left;
}

#manageButtons {
    position: relative;
    bottom: 5%;
    left: 0%;
}
/*end STUDENT READ*/

/*HOME/INDEX PAGE*/
/*login input group items that are img (the custom icons)*/
.login .input-group-addon img {
    height: auto;
    margin: -10px;
    margin-bottom: -5px;
    vertical-align: text-bottom;
}

/*login divs centering*/
.login {
    align-items: center;
    margin-top: 5px;
}

    /*login input items width and centering help*/
    .login .input-group {
        width: 50%;
        max-width: 500px;
        min-width:200px;
        margin: auto;
        margin-top: 5px;
    }
/*Background of the home page*/
.backgroundHome {
    background: radial-gradient(#B3C65F,#618B42);
    width: 100vw;
    height: 100vh;
}
/* ... */

